--- a/index.html
+++ b/index.html
@@ -1,13 +1,31 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>Cookie Clicker</title>
 
-    <link rel="stylesheet" href="css/main.css">
-  </head>
-  <body>
+<head>
+  <meta charset="utf-8">
+  <title>Cookie Clicker</title>
+
+  <link rel="stylesheet" href="css/main.css">
+</head>
+
+<body>
+
+  <div class="container">
+    <h1>Cookies</h1>
+
+    <div id="cookies">
+      <p>Score:</p>
+      <img class="img1" src="assets/cookie.jpeg">
+    </div>
+
+  <div id="buttons">
+    <a class="btn" id="btn1" href="">Counter</a>
+    <a class="btn" id="btn2" href="">Multiplier</a>
+  </div>
+
+  </div>
 
   <script src="js/game.js"></script>
-  </body>
+</body>
+
 </html>
