--- a/index.html
+++ b/index.html
@@ -28,13 +28,13 @@
       <div id="autoclicker_wrapper">
         <button type="button" class="btn" id="autoclicker">Auto Clicker (<span id="autoclicker_cost">20</span> cookies) <span id="autoclicker_purchase_count" style="float:right"></span></button>
         <div id="more_info_autoclicker" class="more_info hidden">
-          When you buy this, it will add 1 cookir per second for the first purchase, 2, 3 4 cookies per second for the 2nd, 3rd and 4th purchase and so on.
+          When you buy this, it will add 1 cookie per second for the first purchase, 2, 3 4 cookies per second for the 2nd, 3rd and 4th purchase and so on.
         </div>
       </div>
       <div id="bonus_wrapper">
         <button type="button" class="btn" id="bonus">Bonus (<span id="bonus_cost">30</span> cookies) <span id="bonus_purchase_count" style="float:right"></span></button>
         <div id="more_info_bonus" class="more_info hidden">
-          When you buy this, it will multiply the click by 3 for the first purchase, by 6 times, 9 times, 12 times for 2nd, 3rd and 4th purchase and so on.
+          When you buy this, it will multiply the click by 3 for the first purchase, by 6 times, 9 times, 12 times for 2nd, 3rd and 4th purchase and so on. This feature will stop in 10 seconds.
         </div>
       </div>
 
